@@ -1,3 +1,8 @@
+2006-09-22  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-selection.c: always recalculate the
+	selection when restarting it.	
+
 2006-09-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c
